Adding landing and services

--- a/index.html
+++ b/index.html
@@ -40,6 +40,84 @@
     </div>
 </header>
 <!-- Header end -->
+<!-- Landing start -->
+<section class="landing">
+    <div class="overlayer"></div>
+    <div class="side-content">
+        <div class="text">
+            <h1>hello world!<br>
+                we are kasper,we make art.</h1>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt nibh pulvinar a. curabitur aliquet quam. Accumsan id impardiet et, porttitor sem. Mauris
+                blandit aliquet elit, eget tincidunt.</p>
+        </div>
+    </div>
+    <i class="fas fa-chevron-right right slide"></i>
+    <i class="fas fa-chevron-left left slide"></i>
+    <ul class="slide-bar">
+        <li></li>
+        <li class="selected"></li>
+        <li></li>
+    </ul>
+</section>
+<!-- Landing end -->
+<!-- services start -->
+<section class="services">
+    <div class="container">
+        <div class="main-title">
+            <h2>services</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt</p>
+        </div>
+        <div class="services-grid">
+            <!-- service 1 start -->
+            <div class="service">
+                <i class="fas fa-desktop"></i>
+                <div class="service-text">
+                    <h3>Vorem amet intuitive</h3>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget
+                        tincidunt nibh pulvinar a. curabitur aliquet quam.</p>
+                </div>
+            </div>
+            <!-- service 1 end -->
+            <!-- service 2 start -->
+            <div class="service">
+                <i class="fas fa-cogs"></i>
+                <div class="service-text">
+                    <h3>Vorem amet intuitive</h3>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget
+                        tincidunt nibh pulvinar a. curabitur aliquet quam.</p>
+                </div>
+            </div>
+            <!-- service 2 end -->
+            <!-- service 3 start -->
+            <div class="service">
+                <i class="fas fa-pencil-ruler"></i>
+                <div class="service-text">
+                    <h3>Vorem amet intuitive</h3>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget
+                        tincidunt nibh pulvinar a. curabitur aliquet quam.</p>
+                </div>
+            </div>
+            <!-- service 3 end -->
+            <!-- service 4 start -->
+            <div class="service">
+                <i class="fas fa-camera"></i>
+                <div class="service-text">
+                    <h3>Vorem amet intuitive</h3>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget
+                        tincidunt nibh pulvinar a. curabitur aliquet quam.</p>
+                </div>
+            </div>
+            <!-- service 4 end -->
+        </div>
+    </div>
+</section>
+<!-- services end -->
 <!-- background -->
 <div class="background">
     <div class="container">
