adding design section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,26 @@
     </div>
 </section>
 <!-- services end -->
+<!-- design start -->
+<section class="design">
+    <div class="mobiles">
+        <img class="ione" src="images/ione.png" alt="Phone img">
+        <img class="itwo" src="images/itwo.png" alt="Phone img">
+        <div class="img-content"></div>
+    </div>
+    <div class="side-content">
+        <div>
+            <h4>our design comes with...</h4>
+            <ul>
+                <li>responsive design</li>
+                <li>modern and clean design</li>
+                <li>clean code</li>
+                <li>browser friendly</li>
+            </ul>
+        </div>
+    </div>
+</section>
+<!-- design end -->
 <!-- background -->
 <div class="background">
     <div class="container">
