adding portfolio and video sections

--- a/index.html
+++ b/index.html
@@ -138,6 +138,94 @@
     </div>
 </section>
 <!-- design end -->
+<!-- start portfolio -->
+<section class="portfolio">
+    <div class="main-title">
+        <h2>portfolio</h2>
+        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+            tincidunt</p>
+    </div>
+    <ul class="shuffle">
+        <li class="active">all</li>
+        <li>app</li>
+        <li>photography</li>
+        <li>web</li>
+        <li>print</li>
+    </ul>
+    <div class="proj-container">
+        <div class="p-box">
+            <img src="images/shuffle-01.jpg" alt="Project 1">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <div class="p-box">
+            <img src="images/shuffle-02.jpg" alt="Project 2">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <div class="p-box">
+            <img src="images/shuffle-03.jpg" alt="Project 3">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <div class="p-box">
+            <img src="images/shuffle-04.jpg" alt="Project 4">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <div class="p-box">
+            <img src="images/shuffle-05.jpg" alt="Project 5">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <div class="p-box">
+            <img src="images/shuffle-06.jpg" alt="Project 6">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <div class="p-box">
+            <img src="images/shuffle-07.jpg" alt="Project 7">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <div class="p-box">
+            <img src="images/shuffle-08.jpg" alt="Project 8">
+            <div class="box-text">
+                <h4>awesome image</h4>
+                <p>photography</p>
+            </div>
+        </div>
+        <a class="more" href="#">more</a>
+    </div>
+</section>
+<!-- end portfolio -->
+<!-- start video -->
+<section class="video">
+    <video autoplay muted loop>
+        <source src="videos/rog.mp4" type="video/mp4">
+        Awosome Video
+    </video>
+    <div class="over-video">
+        <h4>super awosome video here</h4>
+        <p>Its all you need</p>
+        <input type="button" value="SEE MORE">
+    </div>
+</section>
+<!-- end video -->
 <!-- background -->
 <div class="background">
     <div class="container">
