adding about-us, stats and skils sections

--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
     <div class="mobiles">
         <img class="ione" src="images/ione.png" alt="Phone img">
         <img class="itwo" src="images/itwo.png" alt="Phone img">
-        <div class="img-content"></div>
     </div>
     <div class="side-content">
         <div>
@@ -226,6 +225,119 @@
     </div>
 </section>
 <!-- end video -->
+<!-- start about -->
+<section class="about-us">
+    <div class="container">
+        <div class="main-title">
+            <h2>about us</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt</p>
+        </div>
+        <picture>
+            <img src="images/about.png" alt="About-us">
+        </picture>
+    </div>
+</section>
+<!-- end about -->
+<!-- statistics start -->
+<section class="statistics">
+    <div class="container">
+        <div class="stat-container">
+            <div class="box">
+                <i class="fas fa-mug-hot"></i>
+                <h5>1,263</h5>
+                <p>coffee drinks</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-folder-open"></i>
+                <h5>256</h5>
+                <p>completed projects</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-envelope-open-text"></i>
+                <h5>1,743</h5>
+                <p>mail sent</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-award"></i>
+                <h5>17</h5>
+                <p>awards received</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- statistics end -->
+<!-- skils start -->
+<section class="skills">
+    <div class="container">
+        <!-- start testimonals -->
+        <div class="testimonial">
+            <h4>testimonials</h4>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt.</p>
+            <div class="content">
+                <!-- test 1 start -->
+                <div>
+                    <img src="images/skills-01.jpg" alt="Client">
+                    <div class="text">
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                            eget tincidunt.</p>
+                        <p>John Doe, CEO</p>
+                    </div>
+                </div>
+                <!-- test 1 end -->
+                <!-- test 2 start -->
+                <div>
+                    <img src="images/skills-02.jpg" alt="Client">
+                    <div class="text">
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                            eget tincidunt.</p>
+                        <p>John Doe, CEO</p>
+                    </div>
+                </div>
+                <!-- test 2 end -->
+                <ul>
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+        <!-- end testimonial -->
+        <!-- start skills -->
+        <div class="our-skills">
+            <h4>our skills</h4>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt.</p>
+            <div class="stats">
+                <h4>adobe</h4>
+                <div class="prog">
+                    <span style="width: 90%;" progress="90%"></span>
+                </div>
+            </div>
+            <div class="stats">
+                <h4>html & css</h4>
+                <div class="prog">
+                    <span style="width: 85%;" progress="85%"></span>
+                </div>
+            </div>
+            <div class="stats">
+                <h4>javascript</h4>
+                <div class="prog">
+                    <span style="width: 80%;" progress="80%"></span>
+                </div>
+            </div>
+            <div class="stats">
+                <h4>php</h4>
+                <div class="prog">
+                    <span style="width: 90%;" progress="90%"></span>
+                </div>
+            </div>
+        </div>
+        <!-- end skills -->
+    </div>
+</section>
+<!-- skils end -->
 <!-- background -->
 <div class="background">
     <div class="container">
