--- a/index.html
+++ b/index.html
@@ -338,6 +338,81 @@
     </div>
 </section>
 <!-- skils end -->
+<!-- qoute start -->
+<section class="qoute">
+    <div class="container">
+        <q>accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</q>
+        <span>John Doe</span>
+    </div>
+</section>
+<!-- qoute end -->
+<!-- price start -->
+<section class="price">
+    <div class="container">
+        <div class="main-title">
+            <h2>pricing</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt</p>
+        </div>
+        <div class="plans">
+            <div class="plan">
+                <div class="head">
+                    <h4>basic</h4>
+                    <span class="plan-price dolar">19</span>
+                </div>
+                <ul>
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="plan">
+                <div class="head">
+                    <h4>premium</h4>
+                    <span class="plan-price dolar">29</span>
+                </div>
+                <ul>
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="plan">
+                <div class="head">
+                    <h4>pro</h4>
+                    <span class="plan-price dolar">39</span>
+                </div>
+                <ul>
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <a href="#">Buy Now</a>
+            </div>
+            <div class="plan">
+                <div class="head">
+                    <h4>platinum</h4>
+                    <span class="plan-price dolar">49</span>
+                </div>
+                <ul>
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <a href="#">Buy Now</a>
+            </div>
+        </div>
+        <p>Contact us if you have special request</p>
+        <a href="#">Contact Us</a>
+    </div>
+</section>
+<!-- price end -->
 <!-- background -->
 <div class="background">
     <div class="container">
