adding subscribe section

--- a/index.html
+++ b/index.html
@@ -413,6 +413,19 @@
     </div>
 </section>
 <!-- price end -->
+<!-- subscribe start -->
+<section class="subscribe">
+    <div class="container">
+        <form action="">
+            <i class="far fa-envelope"></i>
+            <input type="email" id="email-sub" placeholder="Your E-mail" required>
+            <input type="submit" for="email-sub" value="SUBSCRIBE">
+        </form>
+        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget
+            tincidunt.</p>
+    </div>
+</section>
+<!-- subscribe end -->
 <!-- background -->
 <div class="background">
     <div class="container">
