--- a/index.html
+++ b/index.html
@@ -426,6 +426,55 @@
     </div>
 </section>
 <!-- subscribe end -->
+<!-- contact start -->
+<section class="contact">
+    <div class="container">
+        <div class="main-title">
+            <h2>pricing</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt</p>
+        </div>
+        <div class="content">
+            <form action="">
+                <input type="text" class="m-input" placeholder="Your Name" required>
+                <input type="email" class="m-input" placeholder="Your Email" required>
+                <textarea class="m-input" placeholder="Your Message" cols="30" rows="10" required></textarea>
+                <input type="submit" class="m-input" value="SEND MESSAGE">
+            </form>
+            <div class="info">
+                <div>
+                    <h4>GET IN TOUCH</h4>
+                    <a href="tel:+00 123.456.789">+00 123.456.789</a>
+                    <a href="tel:+00 123.456.789">+00 123.456.789</a>
+                </div>
+                <div>
+                    <h4>WHERE WE ARE</h4>
+                    <address>
+                        Awesome Address 17 <br>
+                        New York, NYC <br>
+                        123-4567-890 <br>
+                        USA
+                    </address>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- contact end -->
+<!-- footer start -->
+<footer>
+    <div class="content">
+        <img src="images/logo.png" alt="LOGO">
+        <h4>we are social</h4>
+        <hr>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-google-plus-g"></i></a>
+        <a href="#"><i class="fas fa-globe"></i></a>
+        <p>© 2021 Kasper All Right Reserved</p>
+    </div>
+</footer>
+<!-- footer end -->
 <!-- background -->
 <div class="background">
     <div class="container">
