--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <i class="fas fa-list-ul select-nav"></i>
             <ul>
                 <li class="active"><a href="#">home</a></li>
-                <li><a href="#">services</a></li>
-                <li><a href="#">portfolio</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">pricing</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#services">services</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#pricing">pricing</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
             <div class="search"><i class="fas fa-search"></i></div>
         </nav>
@@ -62,7 +62,7 @@
 </section>
 <!-- Landing end -->
 <!-- services start -->
-<section class="services">
+<section class="services" id="services">
     <div class="container">
         <div class="main-title">
             <h2>services</h2>
@@ -138,7 +138,7 @@
 </section>
 <!-- design end -->
 <!-- start portfolio -->
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
     <div class="main-title">
         <h2>portfolio</h2>
         <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
@@ -226,7 +226,7 @@
 </section>
 <!-- end video -->
 <!-- start about -->
-<section class="about-us">
+<section class="about-us" id="about">
     <div class="container">
         <div class="main-title">
             <h2>about us</h2>
@@ -347,7 +347,7 @@
 </section>
 <!-- qoute end -->
 <!-- price start -->
-<section class="price">
+<section class="price" id="pricing">
     <div class="container">
         <div class="main-title">
             <h2>pricing</h2>
@@ -409,7 +409,7 @@
             </div>
         </div>
         <p>Contact us if you have special request</p>
-        <a href="#">Contact Us</a>
+        <a href="#contact">Contact Us</a>
     </div>
 </section>
 <!-- price end -->
@@ -427,10 +427,10 @@
 </section>
 <!-- subscribe end -->
 <!-- contact start -->
-<section class="contact">
+<section class="contact" id="contact">
     <div class="container">
         <div class="main-title">
-            <h2>pricing</h2>
+            <h2>contact us</h2>
             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
                 tincidunt</p>
         </div>
@@ -470,26 +470,15 @@
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-google-plus-g"></i></a>
-        <a href="#"><i class="fas fa-globe"></i></a>
-        <p>© 2021 Kasper All Right Reserved</p>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <p>© 2021 - <a href="#">Kasper</a> All Right Reserved</p>
     </div>
 </footer>
 <!-- footer end -->
 <!-- background -->
 <div class="background">
     <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
     </div>
 </div>
 
