--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 <!-- background -->
 <div class="background">
     <div class="container">
-        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
     </div>
 </div>
 
