--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 <!-- footer start -->
 <footer>
     <div class="content">
-        <img src="images/logo.png" alt="LOGO">
+        <img src="images/logo0.png" alt="LOGO">
         <h4>we are social</h4>
         <hr>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -478,19 +478,7 @@
 <!-- background -->
 <div class="background">
     <div class="container">
-        <!-- <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span> -->
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
     </div>
 </div>
 
